mudando a imagm de fundo

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: url("../img/fundo2.png") no-repeat center center fixed;
+    background: url("../img/Captura\ de\ tela\ 2025-12-01\ 125805\ \(1\).png") no-repeat center center fixed;
     background-size: cover;
 }
 
