--- a/css/desen.css
+++ b/css/desen.css
@@ -45,7 +45,7 @@ body {
 .logo-image {
     height: 50px; 
     /* Brilho neon roxo para a logo */
-    filter: drop-shadow(0 0 8px #d900ff); /* Roxo Neon */
+    
 }
 
 .nav ul {
@@ -59,14 +59,13 @@ body {
 }
 
 .nav ul li a {
+    margin: 0 16px;
+    color: #d38bff;
     text-decoration: none;
-    /* Cor dos links em Roxo Sutil/Escuro */
-    color: #a043ff; 
-    font-weight: 600;
-    font-size: 15px;
-    letter-spacing: 0.5px;
-    transition: color 0.3s, transform 0.3s;
-    text-shadow: none; 
+    font-weight: bold;
+    letter-spacing: 1px;
+    transition: .3s ease;
+    display: inline-block;
 }
 
 .nav ul li a:hover {
@@ -121,8 +120,8 @@ body {
     padding: 30px;
     border-radius: 20px; 
     text-align: center; 
-    min-height: 350px; 
-    width: 330px; /* Largura definida para a coluna */
+    min-height: 250px; 
+    width: 250px; /* Largura definida para a coluna */
     display: flex;
     flex-direction: column;
     align-items: center;
